--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.13",
     "redux": "^3.7.2",
-    "skeleton-css-webpack": "^2.0.4"
+    "skeleton-css-webpack": "^2.0.4",
+    "uuid": "^3.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
