--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.13",
     "redux": "^3.7.2",
+    "reselect": "^3.0.1",
     "skeleton-css-webpack": "^2.0.4",
     "uuid": "^3.1.0"
   },
