--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "redux": "^3.7.2",
     "reselect": "^3.0.1",
     "skeleton-css-webpack": "^2.0.4",
+    "sort-by": "^1.2.0",
     "uuid": "^3.1.0"
   },
   "scripts": {
