--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "lint": "eslint src; exit 0"
+    "lint": "eslint src; exit 0",
+    "server": "node server/api-server/server.js"
   },
   "devDependencies": {
     "eslint": "^4.7.2",
