--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "server"]
 	path = server
-	url = https://github.com/brenj/reactnd-project-readable-starter.git
+	url = git@github.com:brenj/reactnd-project-readable-starter.git
