--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "uuid": "^3.1.0"
   },
   "engines": {
-    "node": "8.9.1"
+    "node": "8.9.1",
+    "npm": "5.5.1"
   },
   "scripts": {
     "start": "run-p server react",
