--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "npm": "5.5.1"
   },
   "scripts": {
-    "start": "run-p server react",
+    "start": "run-p server readable",
     "readable": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
