--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "npm": "5.5.1"
   },
   "scripts": {
-    "start": "run-p server readable",
-    "readable": "react-scripts start",
+    "start": "react-scripts start",
+    "dev": "run-p server readable",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
