Add clean script to package file

--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "dev": "run-p server readable",
-    "build": "react-scripts build",
+    "dev": "run-p server start",
+    "build": "npm run clean && react-scripts build",
+    "clean": "rm -rf build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "lint": "eslint src; exit 0",
