--- a/package.json
+++ b/package.json
@@ -39,6 +39,6 @@
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.4.0",
-    "reddit-clone-server": "file:server/api-server"
+    "reddit-clone-server": "file:server"
   }
 }
