--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.13",
-    "reddit-clone-server": "file:server/api-server",
+    "reddit-clone-server": "file:server",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "reselect": "^3.0.1",
@@ -27,7 +27,7 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "lint": "eslint src; exit 0",
-    "server": "node server/api-server/server.js"
+    "server": "node server/server.js"
   },
   "devDependencies": {
     "eslint": "^4.7.2",
