--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,7 @@
 .env.development.local
 .env.test.local
 .env.production.local
-
 npm-debug.log*
+package-lock.json
 yarn-debug.log*
 yarn-error.log*
